Add ACDC Badge Sniper data files and packaging script
- Created teams.json to store team data for the ACDC Badge Sniper.
- Added team_profile.json as a template for team profiles.
- Introduced openai-system-prompt.md to define the assistant's capabilities and workflow.
- Implemented package_skill.py to package Codex skills into .skill files, including validation and file iteration.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acdc-26",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "description": "CrayCon Creepers ACDC-26 monorepo",
   "workspaces": [
     "web/*"
@@ -23,6 +23,7 @@
   "keywords": [
     "acdc26",
     "hackathon",
+    "minecraft",
     "ccc",
     "monorepo",
     "sharepoint",
@@ -31,7 +32,6 @@
   "contributors": [
     "damsleth",
     "siifux",
-    "remi749",
     "jenunn"
   ],
   "license": "WTFPL",
