--- a/web/wrangler.toml
+++ b/web/wrangler.toml
@@ -1,3 +1,3 @@
 name = "craycon-creepers"
 compatibility_date = "2026-01-14"
-assets = { directory = "./dist" }
+assets = { directory = "./dist", not_found_handling = "single-page-application" }
