feat: Implement bulk spawning of farmers and add job type selection in UI

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bedrock-protocol": "^3.52.0",
     "canvas": "^3.2.1",
     "mineflayer": "^4.33.0",
+    "mineflayer-pathfinder": "^2.4.5",
     "prismarine-auth": "^2.7.0",
     "prismarine-viewer": "^1.33.0",
     "ws": "^8.19.0"
