--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "license": "WTFPL",
   "dependencies": {
     "bedrock-protocol": "^3.52.0",
+    "blessed": "^0.1.81",
     "canvas": "^3.2.1",
     "mineflayer": "^4.33.0",
     "mineflayer-pathfinder": "^2.4.5",
